[package]
name = "jsonpath_lib"
version = "0.1.12"
authors = ["Changseok Han <freestrings@gmail.com>"]

description = "It is JsonPath engine written in Rust. it provide a similar API interface in Webassembly and Javascript also. - Webassembly Demo: https://freestrings.github.io/jsonpath"
readme = "README.md"

keywords = ["jsonpath", "json", "webassembly", "nodejs", "javascript"]

repository = "https://github.com/freestrings/jsonpath"
documentation = "https://docs.rs/jsonpath_lib/0.1.0/jsonpath_lib"
license = "MIT"

categories = ["parsing"]

[badges]
travis-ci = { repository = "freestrings/jsonpath", branch = "master" }

[dependencies]
log = "0.4"
env_logger = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = "1.0.2"

[dev-dependencies]
bencher = "0.1.5"

[lib]
name = "jsonpath_lib"
path = "src/lib.rs"

[profile.release]
#debug = true
#lto = false
