[package]
name = "jsonpath_lib2"
version = "0.3.0"
authors = [
    "Changseok Han <freestrings@gmail.com>",
    "Ivan Azoyan <ivan.azoyan@gmail.com",
]
edition = "2021"

description = "Updated fork of jsonpath_lib2. It is JsonPath engine written in Rust. It provide a similar API interface in Webassembly and Javascript too. - Webassembly Demo: https://freestrings.github.io/jsonpath"
readme = "README.md"

keywords = ["jsonpath", "json", "webassembly", "lua", "query"]
categories = ['wasm', "parser-implementations", "api-bindings"]

repository = "https://github.com/freestrings/jsonpath"
documentation = "https://docs.rs/jsonpath_lib/0.3.0/jsonpath_lib"
license = "MIT"

[badges]
travis-ci = { repository = "freestrings/jsonpath", branch = "master" }

[dependencies]
log = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[features]
logs = ["log"]
ffi = []

[dev-dependencies]
env_logger = "0.11"

[lib]
name = "jsonpath_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

#[profile.release]
#debug = true
#lto = false
