[package]
name = "jsonpath-wasm"
version = "0.1.0"
authors = ["Changseok Han <freestrings@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

jsonpath_lib = {path = "../"}
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
