[package]
name = "lua_vs_rust_benchmark"
version = "0.1.0"
authors = ["Changseok Han <freestrings@gmail.com>"]
license = "MIT"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
jsonpath_lib = { path = "../../" }

[[bin]]
name = "lua_vs_rust_benchmark"
path = "example.rs"