[package]
name = "jsonpath4nodejs"
version = "0.1.1"
authors = ["Changseok Han <freestrings@gmail.com>"]
description = "jsonpath_lib bindings for nodejs"
keywords = ["library", "jsonpath", "json", "nodejs"]
repository = "https://github.com/freestrings/jsonpath"
license = "MIT"

build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
jsonpath_lib = "0.1.8"
neon = "0.2.0"
neon-serde = "0.1.1"
serde_json = { version = "1.0", features = ["preserve_order"] }

[lib]
name = "jsonpath4nodejs"
crate-type = ["dylib"]